--- a/luci-theme-ifit/files/templates/footer.htm
+++ b/luci-theme-ifit/files/templates/footer.htm
@@ -1,9 +1,12 @@
 <%#
 	
-	ifit is a clean HTML5 theme for LuCI. It is based on luci-theme-material.
+	InfinityFreedom is a clean HTML5 theme for LuCI. It is based on luci-theme-material.
 
-	luci-theme-ifit
+	luci-theme-infinityfreedom
 	Copyright 2020 Richard Yu <xiaoqingfengatgm@gmail.com>
+
+	Have a bug? Please create an issue here on GitHub!
+	https://github.com/xiaoqingfengATGH/luci-theme-infinityfreedom/issues
 	
 	luci-theme-material:
 	Copyright 2015 Lutty Yang
