--- a/luci-theme-ifit/files/templates/header.htm
+++ b/luci-theme-ifit/files/templates/header.htm
@@ -1,9 +1,12 @@
 <%#
 	
-	ifit is a clean HTML5 theme for LuCI. It is based on luci-theme-material.
+	InfinityFreedom is a clean HTML5 theme for LuCI. It is based on luci-theme-material.
 
-	luci-theme-ifit
+	luci-theme-infinityfreedom
 	Copyright 2020 Richard Yu <xiaoqingfengatgm@gmail.com>
+
+	Have a bug? Please create an issue here on GitHub!
+	https://github.com/xiaoqingfengATGH/luci-theme-infinityfreedom/issues
 	
 	luci-theme-material:
 	Copyright 2015 Lutty Yang
@@ -221,7 +224,7 @@
 <header>
 	<div class="container">
 		<span class="showSide"></span>
-		<a class="brand" href="#"><%=boardinfo.hostname or "?"%></a>
+		<a class="brand" href="#"><%="OpenWrt"%></a>
 		<div class="pull-right">
 			<% render_changes() %>
 			<span id="xhr_poll_status" style="display:none" onclick="XHR.running() ? XHR.halt() : XHR.run()">
@@ -232,7 +235,7 @@
 	</div>
 </header>
 	<script>
-	var brandurl = '/luci-static/ifit/images/brand.png';
+	var brandurl = '/luci-static/infinityfreedom/images/brand.png';
 	$.ajax({
         url : brandurl,
         type : 'HEAD',
