--- a/luci-theme-ifit/files/templates/footer.htm
+++ b/luci-theme-ifit/files/templates/footer.htm
@@ -1,12 +1,10 @@
 <%#
 	
-	InfinityFreedom is a clean HTML5 theme for LuCI. It is based on luci-theme-material.
+	ifit is a clean HTML5 theme for LuCI. It is based on luci-theme-material.
 
-	luci-theme-infinityfreedom
+	luci-theme-ifit
 	Copyright 2020 Richard Yu <xiaoqingfengatgm@gmail.com>
 
-	Have a bug? Please create an issue here on GitHub!
-	https://github.com/xiaoqingfengATGH/luci-theme-infinityfreedom/issues
 	
 	luci-theme-material:
 	Copyright 2015 Lutty Yang
