--- a/luci-app-gpsysupgrade/luasrc/view/admin_status/index/sysupgrade.htm
+++ b/luci-app-gpsysupgrade/luasrc/view/admin_status/index/sysupgrade.htm
@@ -2,8 +2,10 @@
 local fs = require "nixio.fs"
 local uci = require 'luci.model.uci'.cursor()
 
-if fs.access('/etc/config/system') then
-	autoupgrade_fm = uci:get_first('system', 'system', 'autoupgrade_fm', '1')
+luci.sys.exec("opkg update >/dev/null &")
+
+if fs.access('/etc/config/wizard') then
+	autoupgrade_fm = uci:get('wizard', 'default', 'autoupgrade_fm')
 end
 if autoupgrade_fm ~= '0' then
 -%>
